# code_refinery

./: .gitignore  LICENSE  README.md  setup.sh  setup_auth.py
backend/: auth.py  env.example  main.py  models.py  pyproject.toml  requirements.txt
backend/services/: llm_service.py  refactor_service.py
backend/tests/: test_logging.py  test_main.py  test_services.py
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: CodeEditor.tsx  ErrorBoundary.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
